# xsil

./: .gitignore  LICENSE  README.md
.cursor/rules/: no-cursor-attribution.mdc
.githooks/: prepare-commit-msg
.github/workflows/: ci.yml  cli-release.yml
cli/: CHANGELOG.md  Cargo.toml  README.md  test.tgz
cli/check_signed/: manifest.json
cli/src/: constants.rs  init.rs  main.rs  manager.rs  registry.rs  request.rs  resolver.rs  types.rs  wizard.rs
cli/tampered_manifest_pkg/: manifest.json
cli/tampered_pkg/: manifest.json
cli/temp_pkg/: ext  manifest.json
docs/: README.md  architecture-v2.md  cli-v3.md  developer-publishing.md  execution-model.md  publishing-flow-v3.md  publishing.md  reproducibility.md  tool-registry.md
examples/rvx-demo/: .xsilignore  README.md  manifest.json
examples/rvx-demo/docs/: overview.md
examples/rvx-demo/sim/: run.sh  spike.yaml
examples/rvx-demo/src/: hello.c
examples/rvx-demo/tests/: expected.txt  run.sh
examples/rvx-demo/toolchain/: README.md
spec/: xsil.md
